# iberian-day-ahead-market-simulator

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish.yml  tests.yml
docs/: data_book.md
examples/: 260117_clearing_process.ipynb  260117_rdcs_optimization.ipynb  260118_parse_wandb_data.ipynb  260119_analyze_errors.ipynb  260119_rdc_analytics.ipynb  application_examples.ipynb  download_omie_data.ipynb  paper_replication.ipynb  rdcs_simulation_2.ipynb
examples/data/: LISTA_UNIDADES.XLS  README.md  marginalpdbc.parquet  price_france.parquet
examples/data/CAB/: CAB_20250621.1
examples/data/DET/: DET_20250621.1
examples/data/capacidad_inter_pbc/: capacidad_inter_pbc_20250621.1
src/iberian_day_ahead_market_simulator/: __init__.py  clear_mibel_with_price_curve.py  clearing_process.py  columns.py  const.py  data_preprocessor.py  get_new_paradoxical_orders_list_adding_and_removing.py  make_model.py  pandas_typing.py  paradoxal_orders_tools.py  paradoxical_orders_tools.py  parse_omie_files.py  plot_helpers.py  residual_demand_curve.py  results_analyze_tools.py  run_model.py  tools.py
src/iberian_day_ahead_market_simulator/schemas/: __init__.py  cab.py  capacidad_inter_pt.py  cleared_det_cab.py  columns_dict.py  det_cab.py  iterations.py  participants_bidding_zones.py  residual_demand_curves.py
src/mibel_simulator/: __init__.py  calculate_residual_demand_with_price_curves.py  clear_mibel_with_price_curve.py  clearing_process.py  columns.py  const.py  data_preprocessor.py  data_validation.py  file_paths.py  get_new_paradox_groups_list_adding_and_removing.py  get_new_paradoxal_orders_list_adding_and_removing.py  make_model.py  model.py  model_info_extraction.py  pandas_typing.py  pandera_schemas.py  paradox_groups_tools.py  paradoxal_orders_tools.py  parse_omie_files.py  plot_helpers.py  plotting.py  residual_demand_curve.py  results_analyze_tools.py  run_model.py  tools.py
src/mibel_simulator.egg-info/: PKG-INFO
src/mibel_simulator/data/: participants_bidding_zones.csv  uof_zones.csv
src/mibel_simulator/schemas/: __init__.py  cab.py  capacidad_inter_pt.py  cleared_det_cab.py  clearing_prices.py  columns_dict.py  det.py  det_cab.py  exclusive_block_order_grouped.py  iterations.py  parent_child_bloque.py  parent_child_scos.py  participants_bidding_zones.py  residual_demand_curves.py  sco_bids_tramo_grouped.py  sell_profiles.py  spain_portugal_transmissions.py  trials.py  uof_zones.py
tests/: conftest.py  const.py  test_calculate_residual_demand_with_price_curves.py  test_clear_mibel_with_price_curve.py  test_data_preprocessor.py  test_get_new_paradox_groups_list_adding_and_removing.py  test_get_new_paradoxal_orders_list_adding_and_removing.py  test_get_new_paradoxical_orders_list_adding_and_removing.py  test_integration.py  test_interpolate_residual_demand_curves.py  test_paradox_groups_tools.py  test_paradoxal_orders_tools.py  test_paradoxical_orders_tools.py  test_residual_demand_curve.py  test_solver_factory.py  test_tools.py
