[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iberian-day-ahead-market-simulator"
version = "0.1.0"
description = "Iberian day-ahead electricity market clearing simulator"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Eloy Insunza", email = "einsunza@comillas.edu"},
]
keywords = [
    "electricity-market",
    "MIBEL",
    "OMIE",
    "Euphemia",
    "day-ahead market",
    "market-clearing",
    "energy",
    "optimization",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "pandera",
    "pyomo",
]

[project.optional-dependencies]
solver = [
    "gurobipy",
    "highspy",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "wandb",
    "pandas-stubs",
]

[project.urls]
Homepage = "https://github.com/EloyID/iberian-day-ahead-market-simulator"
Repository = "https://github.com/EloyID/iberian-day-ahead-market-simulator"
"Bug Tracker" = "https://github.com/EloyID/iberian-day-ahead-market-simulator/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "iberian_day_ahead_market_simulator.__version__"}

[tool.setuptools.package-data]
"iberian_day_ahead_market_simulator" = ["data/*.csv"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --strict-markers --tb=short --disable-warnings"
